--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Jekyll Podcaster"
 description: "A Jekyll Theme designed for Podcasters"
 podcast-description: "A Jekyll Theme designed for Podcasters. This is your podcast's summary."
-url:  "https://yardcrane.gitgub.io" # Actual base url of the website
+url:  "https://yardcrane.github.io" # Actual base url of the website
 baseurl: "/"                    # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
 author:
   name: "Alessio Franceschi"
