--- a/_config.yml
+++ b/_config.yml
@@ -1,57 +1,34 @@
-# Site settings
-title: "Jekyll Podcaster"
-description: "A Jekyll Theme designed for Podcasters"
-podcast-description: "A Jekyll Theme designed for Podcasters. This is your podcast's summary."
-url:  "https://yardcrane.github.io" # Actual base url of the website
-baseurl: "/"                    # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
-author:
-  name: "Alessio Franceschi"
-  email: "alessiofranceschi2@gmail.com"
-  url: "https://alessiofranceschi.me"
-permalink: pretty
-permalink: /:title
-keywords: [podcast, jekyll]
+title: Long Haul
+description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-#Plugins
-plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-sitemap]
+url: http://long-haul.netlify.app
+paginate_path: "blog/page:num/"
+permalink: blog/:title/
 
-#exclude: [_podcast.rss] #Ignore this, it will be used in case I decide to add rss feed
+# Header Option
+# header: large
 
-#Pagination
+markdown: kramdown
+highlighter: rouge
+plugins: [jekyll-paginate]
 paginate: 5
-paginate_path: "/page-:num/"
 
-#Sass
-sass:
-  style: compressed
-  sourcemap: never
+navigation:
+  - title: Home
+    url: /index.html
+  - title: About
+    url: /about
+  - title: Contact
+    url: /contact
 
-#SEO
-twitter:
-  username: PandaSekh
-  card: summary
-facebook:
-  app_id: 
-logo: /assets/img/Podcast_Cover.png
 social:
-  name: Alessio Franceschi
-  links:
-    - https://github.com/PandaSekh
-    - https://twitter.com/PandaSekh
-    - https://www.linkedin.com/in/alessio-franceschi/
-lang: it
+  github: brianmaierjr
+  twitter: brianmaierjr
+  facebook: brianmaierjr
+  email: brimaidesigns@gmail.com
+  linkedin: brianmaierjr
 
-#Podcast Metadata. Used by the RSS Feed, which currently isn't in use. So you can avoid this
-podcast_title: Jekyll Podcaster
-podcast_author: Alessio Franceschi
-podcast_email: alessiofranceschi2@gmail.com
-podcast_subtitle: "A Jekyll Theme designed for Podcasters"
-podcast_summary: "A Jekyll Theme designed for Podcasters. This is your podcast's summary."
-podcast_description: "A Jekyll Theme designed for Podcasters. This is your podcast's description."
-podcast_explicit: "no"
-podcast_type: serial 
-podcast_lang: en
-podcast_launch: "2019-07-20" #Launch date of your podcast
-podcast_copyright: "&#xA9;Alessio Franceschi"
-podcast_feed: 
-podcast_artwork: "/assets/img/Podcast_Cover.png"
+google_analytics: "UA-58263416-1"
+
+disqus:
+    shortname: brianmaierjr
