--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: Y A R D
+description: yar Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: http://long-haul.netlify.app
+url: http://yardcrane.gitgub.io
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
